# todo

./: alembic.ini  database.py  docker-compose.yaml  main.py  pyproject.toml  repo.py  todo_models.py  todo_schemas.py
__pycache__/: database.cpython-311.pyc.1862408854352  database.cpython-311.pyc.1987768930624  main.cpython-311.pyc.1862353971760  main.cpython-311.pyc.2771441709872  repo.cpython-311.pyc.2958494066192  todo_models.cpython-311.pyc.1196738249200  todo_models.cpython-311.pyc.1455741915456  todo_models.cpython-311.pyc.1862440443264  todo_models.cpython-311.pyc.2358668944400
alembic/: env.py
alembic/versions/: f13273ff0be8_create_todo.py
